--- a/{{cookiecutter.project_slug}}/environment.yml
+++ b/{{cookiecutter.project_slug}}/environment.yml
@@ -14,6 +14,11 @@ dependencies:
   - pip
   {% if cookiecutter.project_packages == "All" -%}
   - pyprojroot
+  - pandas
+  - numpy
+  - matplotlib
+  - seaborn
+  - scikit-learn
   {% endif -%}
   - python={{ cookiecutter.python_version }}
   - pip:
